--- a/kep.html
+++ b/kep.html
@@ -9,7 +9,11 @@
     <body>
         <h1>Képlinkes feladat</h1>
         Főoldal: <a href="index.html">ITT</a> <br>
-        <img src="korte.jpg" alt="Körte" title="Körte" width="400px">
+        <a href="https://driftgames.hu/" target="_blank">
+
+            <img src="Drift.jpg" alt="Drift" title="Drift" width="400">
+    
+        </a>
         
     </body>
 </html>
