--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <a href="listak.html">Listák</a>
         </p>
         <p>
+        <a href="tablazat.html">Órarend</a>
+        </p>
+        <p>
             Itt <b>látható</b> lent a <i>kollázs</i> képem.
         </p>
         <img src="kollazskep.jpg" alt="TT kollázs képe" title="TT KOLLÁZSA" width="400px"> 
