--- a/tablazat.html
+++ b/tablazat.html
@@ -7,7 +7,7 @@
     <title>Órarend</title>
     <style>
         table, th, td {
-            border: 1px solid;
+            border: 1px solid; 
         }  
     </style>
 </head>
@@ -36,12 +36,12 @@
             <td>Matematika</td>
             <td>Matematika</td>
             <td>Programozási alapok</td>
-            <td>Magyar nyelv és irod</td>
+            <td>Magyar nyelv és irodalom</td>
         </tr>
         <tr>
             <td>2.</td>
             <td>Testnevelés</td>
-            <td>Komplex természetud</td>
+            <td>Komplex természetudomány</td>
             <td>Történelem</td>
             <td>Digitális kultúra</td>
             <td>Angol nyelv</td>
@@ -56,31 +56,31 @@
         </tr>
         <tr>
             <td>4.</td>
-            <td>Komplex természetud</td>
-            <td>Magyar nyelv és irod</td>
+            <td>Komplex természetudomány</td>
+            <td>Magyar nyelv és irodalom</td>
             <td>Angol nyelv</td>
-            <td>Komplex természetud</td>
+            <td>Komplex természetudomány</td>
             <td>Történelem</td>
         </tr>
         <tr>
             <td>5.</td>
-            <td>Informatika és távk</td>
+            <td>Informatika és távközlés</td>
             <td>Angol nyelv</td>
-            <td>Munkavállalói ismere</td>
+            <td>Munkavállalói ismeretek</td>
             <td>Testnevelés</td>
             <td>Matematika (komp)</td>
         </tr>
         <tr>
             <td>6.</td>
-            <td>Informatika és távk</td>
-            <td>Magyar nyelv és irod</td>
+            <td>Informatika és távközlés</td>
+            <td>Magyar nyelv és irodalom</td>
             <td>IKT projektmunka</td>
             <td>Matematika</td>
-            <td>Magyar nyelv és irod</td>
+            <td>Magyar nyelv és irodalom</td>
         </tr>
         <tr>
             <td>7.</td>
-            <td>Informatika és távk</td>
+            <td>Informatika és távközlés</td>
             <td></td>
             <td></td>
             <td></td>
