--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>TT Oldala</title>
+        <link rel="stylesheet" href="style.css"
     </head>
     <body>
+        <a class="active" href="index.html">HOME</a>
+        |
+        <a class="active" href="kep.html">Képlinkes feladat</a>
+        |
+        <a class="active" href="listak.html">Listák</a>
+        |
+        <a class="active" href="tablazat.html">Órarend</a>
+        |
+        <a class="active" href="urlap.html">Pizza rendelés</a>
+
         <h1>Tudós Tamás</h1>
         <h2>Tudós Tamás</h2>
         <h3>Tudós Tamás</h3>
         <h4>Tudós Tamás</h4>
         <h5>Tudós Tamás</h5>
         <h6>Tudós Tamás</h6>
-        <a href="kep.html">Képlinkes feladat</a>
-        <p>
-        <a href="listak.html">Listák</a>
-        </p>
-        <p>
-        <a href="tablazat.html">Órarend</a>
-        </p>
-        <p>
-        <a href="urlap.html">Pizza rendelés</a>
-        </p>
+
         <p>
             Itt <b>látható</b> lent a <i>kollázs</i> képem.
         </p>
