--- a/kep.html
+++ b/kep.html
@@ -5,15 +5,25 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>KÉPLINK</title>
+        <link rel="stylesheet" href="style.css"
     </head>
     <body>
+        <a class="active" href="index.html">HOME</a>
+        |
+        <a class="active" href="kep.html">Képlinkes feladat</a>
+        |
+        <a class="active" href="listak.html">Listák</a>
+        |
+        <a class="active" href="tablazat.html">Órarend</a>
+        |
+        <a class="active" href="urlap.html">Pizza rendelés</a>
+
         <h1>Képlinkes feladat</h1>
-        Főoldal: <a href="index.html">ITT</a> <br>
+        Főoldal: <a class="active" href="index.html">ITT</a> <br>
         <a href="https://driftgames.hu/" target="_blank">
 
             <img src="Drift.jpg" alt="Drift" title="Drift" width="400">
     
         </a>
-        
     </body>
 </html>
