--- a/listak.html
+++ b/listak.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listák</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
+    <a class="active" href="index.html">HOME</a>
+    |
+    <a class="active" href="kep.html">Képlinkes feladat</a>
+    |
+    <a class="active" href="listak.html">Listák</a>
+    |
+    <a class="active" href="tablazat.html">Órarend</a>
+    |
+    <a class="active" href="urlap.html">Pizza rendelés</a>
     <h2 style="color:indigo">Listák</h2>
 
     <p style="background-color:cadetblue; width: 300px"> A kedvenc tantárgyaim:</p>
@@ -33,5 +43,6 @@
         Biciklizés
     </li>
 </ul>
+
 </body>
 </html>
