--- a/urlap.html
+++ b/urlap.html
@@ -12,6 +12,16 @@
     </style>
 </head>
 <body>
+    <a class="active" href="index.html">HOME</a>
+    |
+    <a class="active" href="kep.html">Képlinkes feladat</a>
+    |
+    <a class="active" href="listak.html">Listák</a>
+    |
+    <a class="active" href="tablazat.html">Órarend</a>
+    |
+    <a class="active" href="urlap.html">Pizza rendelés</a>
+
     <h1>Pizza rendelés</h1>
     <table>
         <tr>
