--- a/tablazat.html
+++ b/tablazat.html
@@ -10,8 +10,19 @@
             border: 1px solid; 
         }  
     </style>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
+    <a class="active" href="index.html">HOME</a>
+    |
+    <a class="active" href="kep.html">Képlinkes feladat</a>
+    |
+    <a class="active" href="listak.html">Listák</a>
+    |
+    <a class="active" href="tablazat.html">Órarend</a>
+    |
+    <a class="active" href="urlap.html">Pizza rendelés</a>
+
     <table>
         <caption>Órarend</caption>
         <tr>
