--- a/urlap.html
+++ b/urlap.html
@@ -10,6 +10,7 @@
             background-color: coral;
         }
     </style>
+   <link rel="stylesheet" href="style2.css"
 </head>
 <body>
     <a class="active" href="index.html">HOME</a>
