--- a/urlap.html
+++ b/urlap.html
@@ -5,23 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza rendelés</title>
-    <style>
-        body {
-            background-color: coral;
-        }
-    </style>
-   <link rel="stylesheet" href="style2.css"
+   <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <a class="active" href="index.html">HOME</a>
+    <a href="index.html">HOME</a>
     |
-    <a class="active" href="kep.html">Képlinkes feladat</a>
+    <a href="kep.html">Képlinkes feladat</a>
     |
-    <a class="active" href="listak.html">Listák</a>
+    <a href="listak.html">Listák</a>
     |
-    <a class="active" href="tablazat.html">Órarend</a>
+    <a href="tablazat.html">Órarend</a>
     |
-    <a class="active" href="urlap.html">Pizza rendelés</a>
+    <a href="urlap.html">Pizza rendelés</a>
 
     <h1>Pizza rendelés</h1>
     <table>
