--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
         <link rel="stylesheet" href="style.css"
     </head>
     <body>
-        <a class="active" href="index.html">HOME</a>
+        <a href="index.html">HOME</a>
         |
-        <a class="active" href="kep.html">Képlinkes feladat</a>
+        <a href="kep.html">Képlinkes feladat</a>
         |
-        <a class="active" href="listak.html">Listák</a>
+        <a href="listak.html">Listák</a>
         |
-        <a class="active" href="tablazat.html">Órarend</a>
+        <a href="tablazat.html">Órarend</a>
         |
-        <a class="active" href="urlap.html">Pizza rendelés</a>
-
+        <a href="urlap.html">Pizza rendelés</a>
+        
         <h1>Tudós Tamás</h1>
         <h2>Tudós Tamás</h2>
         <h3>Tudós Tamás</h3>
