--- a/listak.html
+++ b/listak.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <a class="active" href="index.html">HOME</a>
+    <a href="index.html">HOME</a>
     |
-    <a class="active" href="kep.html">Képlinkes feladat</a>
+    <a href="kep.html">Képlinkes feladat</a>
     |
-    <a class="active" href="listak.html">Listák</a>
+    <a href="listak.html">Listák</a>
     |
-    <a class="active" href="tablazat.html">Órarend</a>
+    <a href="tablazat.html">Órarend</a>
     |
-    <a class="active" href="urlap.html">Pizza rendelés</a>
+    <a href="urlap.html">Pizza rendelés</a>
     <h2 style="color:indigo">Listák</h2>
 
     <p style="background-color:cadetblue; width: 300px"> A kedvenc tantárgyaim:</p>
