--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css"
     </head>
     <body>
-        <a href="index.html">HOME</a>
+        <a class="active" href="index.html">HOME</a>
         |
         <a href="kep.html">Képlinkes feladat</a>
         |
