--- a/listak.html
+++ b/listak.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <a class="active" href="index.html">HOME</a>
+    <a href="index.html">HOME</a>
     |
     <a href="kep.html">Képlinkes feladat</a>
     |
-    <a href="listak.html">Listák</a>
+    <a class="active" href="listak.html">Listák</a>
     |
     <a href="tablazat.html">Órarend</a>
     |
