--- a/urlap.html
+++ b/urlap.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <a class="active" href="index.html">HOME</a>
+    <a href="index.html">HOME</a>
     |
     <a href="kep.html">Képlinkes feladat</a>
     |
@@ -16,7 +16,7 @@
     |
     <a href="tablazat.html">Órarend</a>
     |
-    <a href="urlap.html">Pizza rendelés</a>
+    <a class="active" href="urlap.html">Pizza rendelés</a>
 
     <h1>Pizza rendelés</h1>
     <table>
