--- a/kep.html
+++ b/kep.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" href="style.css"
     </head>
     <body>
-        <a class="active" href="index.html">HOME</a>
+        <a href="index.html">HOME</a>
         |
-        <a href="kep.html">Képlinkes feladat</a>
+        <a class="active" href="kep.html">Képlinkes feladat</a>
         |
         <a href="listak.html">Listák</a>
         |
