--- a/tablazat.html
+++ b/tablazat.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <a class="active" href="index.html">HOME</a>
+    <a href="index.html">HOME</a>
     |
     <a href="kep.html">Képlinkes feladat</a>
     |
     <a href="listak.html">Listák</a>
     |
-    <a href="tablazat.html">Órarend</a>
+    <a class="active" href="tablazat.html">Órarend</a>
     |
     <a href="urlap.html">Pizza rendelés</a>
 
