--- a/urlap.html
+++ b/urlap.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza rendelés</title>
-   <link rel="stylesheet" href="style.css"
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <style>
@@ -46,6 +46,7 @@
           <li><a href="listak.html">Listák</a></li>
           <li><a href="tablazat.html">Órarend</a></li>
           <li><a class="active" href="urlap.html">Pizza rendelés</a></li>
+          <li><a href="evszakok.html">Évszakok</a></li>
         </ul>
         
         </body>
