--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
           </head>
           <body>
 
-            
             <ul>
               <li><a class="active" href="index.html">Home</a></li>
               <li><a href="kep.html">Képlinkes feladat</a></li>
               <li><a href="listak.html">Listák</a></li>
               <li><a href="tablazat.html">Órarend</a></li>
               <li><a href="urlap.html">Pizza rendelés</a></li>
+              <li><a href="evszakok.html">Évszakok</a></li>
             </ul>
             
             </body>
