--- a/kep.html
+++ b/kep.html
@@ -46,6 +46,7 @@
               <li><a href="listak.html">Listák</a></li>
               <li><a href="tablazat.html">Órarend</a></li>
               <li><a href="urlap.html">Pizza rendelés</a></li>
+              <li><a href="evszakok.html">Évszakok</a></li>
             </ul>
             
             </body>
