--- a/tablazat.html
+++ b/tablazat.html
@@ -10,7 +10,7 @@
             border: 1px solid; 
         }  
     </style>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <style>
@@ -51,6 +51,7 @@
           <li><a href="listak.html">Listák</a></li>
           <li><a class="active" href="tablazat.html">Órarend</a></li>
           <li><a href="urlap.html">Pizza rendelés</a></li>
+          <li><a href="evszakok.html">Évszakok</a></li>
         </ul>
         
         </body>
