--- a/evszakok.html
+++ b/evszakok.html
@@ -86,6 +86,9 @@
     <li><a class="active" href="evszakok.html">Évszakok</a></li>
   </ul>
 
+
+     <h2>Évszakok</h2>
+
     <div class="box">
       <img src="spring.jpg" alt="" width="400px">
         <b><p>TAVASZ</p></b>
