--- a/listak.html
+++ b/listak.html
@@ -63,6 +63,7 @@
           <li><a href="tablazat.html">Órarend</a></li>
           <li><a href="urlap.html">Pizza rendelés</a></li>
           <li><a href="evszakok.html">Évszakok</a></li>
+          <li><a href="footer.html">Footer</a></li>
         </ul>
         <h2 style="color:indigo">Listák</h2>
 
