--- a/urlap.html
+++ b/urlap.html
@@ -47,6 +47,7 @@
           <li><a href="tablazat.html">Órarend</a></li>
           <li><a class="active" href="urlap.html">Pizza rendelés</a></li>
           <li><a href="evszakok.html">Évszakok</a></li>
+          <li><a href="footer.html">Footer</a></li>
         </ul>
         
         </body>
