--- a/tablazat.html
+++ b/tablazat.html
@@ -52,6 +52,7 @@
           <li><a class="active" href="tablazat.html">Órarend</a></li>
           <li><a href="urlap.html">Pizza rendelés</a></li>
           <li><a href="evszakok.html">Évszakok</a></li>
+          <li><a href="footer.html">Footer</a></li>
         </ul>
         
         </body>
