--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>TT Oldala</title>
         <link rel="stylesheet" href="style.css">
+        <style>
+            footer { position: fixed;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                background-color: rgb(21, 255, 0);
+                color: rgb(0, 0, 0);
+                text-align: center;
+        }
+            </style>
     </head>
     <body>
       <style>
@@ -47,7 +57,6 @@
               <li><a href="tablazat.html">Órarend</a></li>
               <li><a href="urlap.html">Pizza rendelés</a></li>
               <li><a href="evszakok.html">Évszakok</a></li>
-              <li><a href="footer.html">Footer</a></li>
             </ul>
             
             </body>
@@ -65,6 +74,11 @@
             Itt <b>látható</b> lent a <i>kollázs</i> képem.
         </p>
         <img src="kollazskep.jpg" alt="TT kollázs képe" title="TT KOLLÁZSA" width="400px"> 
+
+        <footer>
+          <p>Copyright</p>
+          <p><a href="tudost@kkszki.hu">tudost@kkszki.hu</a></p>
+        </footer>
     
 
     </body>
