--- a/kep.html
+++ b/kep.html
@@ -36,6 +36,14 @@
             .active {
               background-color: #04AA6D;
             }
+            footer { position: fixed;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                background-color: rgb(21, 255, 0);
+                color: rgb(0, 0, 0);
+                text-align: center;
+        }
             </style>
             </head>
             <body>
@@ -47,7 +55,6 @@
               <li><a href="tablazat.html">Órarend</a></li>
               <li><a href="urlap.html">Pizza rendelés</a></li>
               <li><a href="evszakok.html">Évszakok</a></li>
-              <li><a href="footer.html">Footer</a></li>
             </ul>
             
             </body>
@@ -60,5 +67,9 @@
             <img src="Drift.jpg" alt="Drift" title="Drift" width="400">
     
         </a>
+        <footer>
+          <p>Copyright</p>
+          <p><a href="tudost@kkszki.hu">tudost@kkszki.hu</a></p>
+        </footer>
     </body>
 </html>
