--- a/urlap.html
+++ b/urlap.html
@@ -36,6 +36,14 @@
         .active {
           background-color: #04AA6D;
         }
+        footer { position: fixed;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                background-color: rgb(21, 255, 0);
+                color: rgb(0, 0, 0);
+                text-align: center;
+        }
         </style>
         </head>
         <body>
@@ -47,7 +55,6 @@
           <li><a href="tablazat.html">Órarend</a></li>
           <li><a class="active" href="urlap.html">Pizza rendelés</a></li>
           <li><a href="evszakok.html">Évszakok</a></li>
-          <li><a href="footer.html">Footer</a></li>
         </ul>
         
         </body>
@@ -140,5 +147,9 @@
         </tr>
         <img src="pizza.jpg" alt="200">
     </table>
+    <footer>
+        <p>Copyright</p>
+        <p><a href="tudost@kkszki.hu">tudost@kkszki.hu</a></p>
+      </footer>
 </body>
 </html>
