--- a/evszakok.html
+++ b/evszakok.html
@@ -43,6 +43,14 @@
       .box {
         float: left;
       }
+      footer { position: fixed;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                background-color: rgb(21, 255, 0);
+                color: rgb(0, 0, 0);
+                text-align: center;
+        }
     </style>
 
     <style>
@@ -84,7 +92,6 @@
     <li><a href="tablazat.html">Órarend</a></li>
     <li><a href="urlap.html">Pizza rendelés</a></li>
     <li><a class="active" href="evszakok.html">Évszakok</a></li>
-    <li><a href="footer.html">Footer</a></li>
   </ul>
 
 
@@ -116,6 +123,10 @@
       </b>
     </div>
 
+    <footer>
+      <p>Copyright</p>
+      <p><a href="tudost@kkszki.hu">tudost@kkszki.hu</a></p>
+    </footer>
 </body>
 
 </html>
