--- a/listak.html
+++ b/listak.html
@@ -52,6 +52,14 @@
             list-style-type: disc;
             float: none;
         }
+        footer { position: fixed;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                background-color: rgb(21, 255, 0);
+                color: rgb(0, 0, 0);
+                text-align: center;
+        }
         </style>
         </head>
         <body>
@@ -63,7 +71,6 @@
           <li><a href="tablazat.html">Órarend</a></li>
           <li><a href="urlap.html">Pizza rendelés</a></li>
           <li><a href="evszakok.html">Évszakok</a></li>
-          <li><a href="footer.html">Footer</a></li>
         </ul>
         <h2 style="color:indigo">Listák</h2>
 
@@ -91,6 +98,11 @@
             Biciklizés
         </li>
     </ul>
+
+    <footer>
+      <p>Copyright</p>
+      <p><a href="tudost@kkszki.hu">tudost@kkszki.hu</a></p>
+    </footer>
     
     </body>
     </html>
