--- a/tablazat.html
+++ b/tablazat.html
@@ -60,7 +60,7 @@
         <body>
         
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index2.html">Home</a></li>
           <li><a href="kep.html">Képlinkes feladat</a></li>
           <li><a href="listak.html">Listák</a></li>
           <li><a class="active" href="tablazat.html">Órarend</a></li>
