--- a/urlap.html
+++ b/urlap.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <style>
@@ -55,7 +55,7 @@
         <body>
         
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index2.html">Home</a></li>
           <li><a href="kep.html">Képlinkes feladat</a></li>
           <li><a href="listak.html">Listák</a></li>
           <li><a href="tablazat.html">Órarend</a></li>
