--- a/index2.html
+++ b/index2.html
@@ -82,6 +82,7 @@ footer { position: under;
     <a href="tablazat.html">Órarend</a>
     <a href="urlap.html">Pizza rendelés</a>
     <a href="evszakok.html">Évszakok</a>
+    <a href="homoktovis.html">Homoktövis</a>
     </div>
 
   <div class="main">
