--- a/kep.html
+++ b/kep.html
@@ -62,6 +62,7 @@
               <li><a href="tablazat.html">Órarend</a></li>
               <li><a href="urlap.html">Pizza rendelés</a></li>
               <li><a href="evszakok.html">Évszakok</a></li>
+              <li><a href="homoktovis.html">Homoktövis</a></li>
             </ul>
             
             </body>
