--- a/evszakok.html
+++ b/evszakok.html
@@ -98,6 +98,7 @@
     <li><a href="tablazat.html">Órarend</a></li>
     <li><a href="urlap.html">Pizza rendelés</a></li>
     <li><a class="active" href="evszakok.html">Évszakok</a></li>
+    <li><a href="homoktovis.html">Homoktövis</a></li>
   </ul>
 
 
