--- a/homoktovis.html
+++ b/homoktovis.html
@@ -12,7 +12,7 @@
     <h1>Homoktövis</h1>
 
    <div class="keret" id="bevezeto">
-    <img src="../img/bokor.jpg" alt="Szüret" id="bokor" title="Szüret"/>
+    <img src="bokor.jpg" alt="Szüret" id="bokor" title="Szüret"/>
         <p>
             A homoktövis eredetileg a Himalája lejtőin és főként Ázsiában termő növény, de ma már meghódította az egész világot. Magyarországon is találkozhatunk vele a Duna mentén, a Balaton partján vagy a Csepel-szigeten. Nálunk védett növény.
         </p>
@@ -23,7 +23,7 @@
 <p>
     A homoktövis széles spektrumon segíti szervezetünk egészségét. Gyógyító hatása akár a meleg, akár a téli időszakban jól jöhet. Legfontosabb egészségügyi hatásai:
 </p>
-<img src="../img/termes.png" id="termes">
+<img src="termes.png" id="termes">
 <ul>
 <li>védi és erősíti az immunrendszert</li>
 <li>késlelteti az öregedési folyamatot</li>
