--- a/urlap.html
+++ b/urlap.html
@@ -62,6 +62,7 @@
           <li><a class="active" href="urlap.html">Pizza rendelés</a></li>
           <li><a href="evszakok.html">Évszakok</a></li>
           <li><a href="homoktovis.html">Homoktövis</a></li>
+          <li><a href="szamologep.html">Számológép</a></li>
         </ul>
         
         </body>
