--- a/evszakok.html
+++ b/evszakok.html
@@ -99,6 +99,7 @@
     <li><a href="urlap.html">Pizza rendelés</a></li>
     <li><a class="active" href="evszakok.html">Évszakok</a></li>
     <li><a href="homoktovis.html">Homoktövis</a></li>
+    <li><a href="szamologep.html">Számológép</a></li>
   </ul>
 
 
