--- a/index2.html
+++ b/index2.html
@@ -83,6 +83,7 @@ footer { position: under;
     <a href="urlap.html">Pizza rendelés</a>
     <a href="evszakok.html">Évszakok</a>
     <a href="homoktovis.html">Homoktövis</a>
+    <a href="szamologep.html">Számológép</a>
     </div>
 
   <div class="main">
