--- a/listak.html
+++ b/listak.html
@@ -78,6 +78,7 @@
           <li><a href="urlap.html">Pizza rendelés</a></li>
           <li><a href="evszakok.html">Évszakok</a></li>
           <li><a href="homoktovis.html">Homoktövis</a></li>
+          <li><a href="szamologep.html">Számológép</a></li>
         </ul>
         <h2 style="color:indigo">Listák</h2>
 
