--- a/evszakok.html
+++ b/evszakok.html
@@ -100,6 +100,7 @@
     <li><a class="active" href="evszakok.html">Évszakok</a></li>
     <li><a href="homoktovis.html">Homoktövis</a></li>
     <li><a href="szamologep.html">Számológép</a></li>
+    <li><a href="pitagorasz.html">Pitagorasz</a></li>
   </ul>
 
 
