--- a/index2.html
+++ b/index2.html
@@ -84,6 +84,7 @@ footer { position: under;
     <a href="evszakok.html">Évszakok</a>
     <a href="homoktovis.html">Homoktövis</a>
     <a href="szamologep.html">Számológép</a>
+    <li><a href="pitagorasz.html">Pitagorasz</a></li>
     </div>
 
   <div class="main">
