--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
               <li><a href="evszakok.html">Évszakok</a></li>
               <li><a href="homoktovis.html">Homoktövis</a></li>
               <li><a href="szamologep.html">Számológép</a></li>
+              <li><a href="pitagorasz.html">Pitagorasz</a></li>
             </ul>
             
             </body>
