--- a/listak.html
+++ b/listak.html
@@ -79,6 +79,7 @@
           <li><a href="evszakok.html">Évszakok</a></li>
           <li><a href="homoktovis.html">Homoktövis</a></li>
           <li><a href="szamologep.html">Számológép</a></li>
+          <li><a href="pitagorasz.html">Pitagorasz</a></li>
         </ul>
         <h2 style="color:indigo">Listák</h2>
 
