--- a/szamologep.html
+++ b/szamologep.html
@@ -62,6 +62,7 @@
                 <li><a href="evszakok.html">Évszakok</a></li>
                 <li><a href="homoktovis.html">Homoktövis</a></li>
                 <li><a class="active" href="szamologep.html">Számológép</a></li>
+                <li><a href="pitagorasz.html">Pitagorasz</a></li>
             </ul>
     <form action="javascript:void(0)">
         <fieldset>
