--- a/urlap.html
+++ b/urlap.html
@@ -63,6 +63,7 @@
           <li><a href="evszakok.html">Évszakok</a></li>
           <li><a href="homoktovis.html">Homoktövis</a></li>
           <li><a href="szamologep.html">Számológép</a></li>
+          <li><a href="pitagorasz.html">Pitagorasz</a></li>
         </ul>
         
         </body>
