--- a/pitagorasz.html
+++ b/pitagorasz.html
@@ -45,8 +45,8 @@
     <legend> Adj meg legalább két oldalt!</legend>
     <label id="aLabel">A:</label><br><input type="number" id="a"  oninput="rajzol()" ><br><br>
     <label id="bLabel">B:</label><br><input type="number" id="b" oninput="rajzol()"><br><br>
+    <label id="cLabel">C:</label><br>
     <button type="button" id="submitButton">Submit</button><br> <button type="reset" id="resetButton">Reset</button>
-    <label id="cLabel"></label><br>
     </form>
     <div id="hsz" ></div>
 
